duniverse/ppx_js_style/test/test.mlt
module type S = sig
  val x : int [@deprecated "[since 2018-01] ..."]
end

[%%expect{|
Line _, characters _-_:
Error: Jane Street style: Invalid deprecated attribute, it will be ignored by the compiler
|}];;

let ( let* ) o f =
  match o with
  | None -> None
  | Some x -> f x

let return x = Some x

let find_and_sum tbl k1 k2 =
  let* x1 = Hashtbl.find_opt tbl k1 in
  let* x2 = Hashtbl.find_opt tbl k2 in
  return (x1 + x2)

[%%expect{|
Line _, characters _-_:
Error: Jane Street style: This use of ( let* ) is forbidden.
ppx_let is currently more featureful, please use that instead to keep a consistent style
|}];;

let find_and_sum tbl k1 k2 =
  ( let* ) (Hashtbl.find_opt tbl k1)
    (fun x1 ->
       ( let* ) (Hashtbl.find_opt tbl k2)
         (fun x2 -> return (x1 + x2)))

[%%expect{| |}];;
